[package]
name = "ball_dont_lie"
version = "0.1.0"
authors = ["Michael Eliot <mieliot@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A wrapper around the balldontlie basketball api."

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
